updated UI/ordplacement